--- a/ferramentas.html
+++ b/ferramentas.html
@@ -104,111 +104,20 @@
 
                             <section class="wrapper-inner">
 
-                                <a href="Libro.html">Amostras</a>
-                                <div class="description">
-                                    <ul>
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li> <p>Amostra 2</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_2.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_2_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li> <p>Amostra 3</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_3.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_3_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 4</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_4.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_4_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 5</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 5</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 6</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_6.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_6_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 7</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_7.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_7_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 8</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_8.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_8_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 9</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_9.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_9_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-
-
-                                    </ul>
-
-                                </div>
-
 
                                 <div class="description">
                                     <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">Experiência 1</a></li>
-                                        <li><a href="debruits.html">Experiência  2</a></li>
-                                        <li><a href="debruits.html">Experiência 3</a></li>
-                                        <li><a href="debruits.html">Experiência 4</a></li>
-                                        <li><a href="debruits.html">Experiência 5</a></li>
-                                        <li><a href="debruits.html">Experiência 6</a></li>
-                                        <li><a href="debruits.html">Experiência 7</a></li>
-                                        <li><a href="debruits.html">Experiência 8</a></li>
-                                        <li><a href="debruits.html">Experiência 9</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1P1s13gVBhXC3pOWJPmPh0nuBgqsfy4yz/view?usp=drive_link">bip_camara</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1C2SCD2Tiz8obP9HXIo__WfLM1XEh6G5c/view?usp=drive_link">Controlador Forno</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1OkCVKXUGyMJ7fZYia76XT821gJj1Avyj/view?usp=drive_link">Vidro </a></li>
+                                        <li><a href="https://drive.google.com/file/d/1klboluduzXoraNmTjEsHhtmmh-d4_-xW/view?usp=drive_link">Pano</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1V13YiWgjvwGKP0y0L38rU-O9NCTrp1yO/view?usp=drive_link">Peneira</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1xUZNIGjmGK8vi6wwbYS-FXVH8AyPGbK0/view?usp=drive_link">Picareta</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1ZsoEwvT4_ti5xNZ649E-bIwQX3V5clNH/view?usp=drive_link">Picareta 2</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1R860aOWLDzbR9lrtUUojDA93EnKeUY8c/view?usp=drive_link">Forno</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1NyIuojo75GM9gE-U9eAl0ley3wGK-3aB/view?usp=sharing">Forno</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1KqpIyOvMKkhpQSNnKEFAonPch4C4F6zo/view?usp=drive_link">Rolo</a></li>
 
                                     </ul>
 
