--- a/LP.html
+++ b/LP.html
@@ -116,15 +116,22 @@
                                 <div class="description">
                                     <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">Amostra 1</a></li>
-                                        <li><a href="debruits.html">Amostra 2</a></li>
-                                        <li><a href="debruits.html">Amostra 3</a></li>
-                                        <li><a href="debruits.html">Amostra 4</a></li>
-                                        <li><a href="debruits.html">Amostra 5</a></li>
-                                        <li><a href="debruits.html">Amostra 6</a></li>
-                                        <li><a href="debruits.html">Amostra 7</a></li>
-                                        <li><a href="debruits.html">Amostra 8</a></li>
-                                        <li><a href="debruits.html">Amostra 9</a></li>
+                                        <li><a href="https://youtu.be/NfBOlFDh6gk">Sample Visualization</a></li>
+                                        <li><a href="https://youtu.be/wvKlhx2K0fs">Esmigalhar</a></li>
+                                        <li><a href="https://youtu.be/TqOPowhfXK8">Sonic Kiln</a></li>
+                                        <li><a href="https://youtu.be/Csjc0valhYc">App Impro 2</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1x5RkmbASfVyStQVv8_8uCz0MHHbBcIZE/view?usp=drive_link">Drone_esmigalhar</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1CV1qxKUoypFj_x2oXPSuQKhXhqBOv8Mr/view?usp=drive_link">Imitação e aumentação</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1ko4VHJIHPBT55_BFvD5vauCyl1RpK9nI/view?usp=drive_link">Intro</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1wPmk9hQKHrqj4Ayew_8EFaA5ss9XL_uf/view?usp=drive_link">Radio Torrão</a></li>
+                                        <li><a href="https://drive.google.com/file/d/10NLZrZ7LSmhjOekpGjr0-vWFgyyOj2aC/view?usp=drive_link">Sampling Sample</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1FHL0IFM0nbJbOWXPc0cK8vqsYRRfFp6M/view?usp=drive_link">Torrão Hidrtação</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1h8SGwet2GFjjJ7mFE2RzQPyBnp64i5GM/view?usp=drive_link">VaporClay I</a></li>
+                                        <li><a href="https://drive.google.com/file/d/11k5Y5eJzO9HgT6prP9RhKXKpCJ7gROmX/view?usp=drive_link">VaporClay II</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1KpqssMBgisPZQ3Fpa45kMBHteVFJL-Bt/view?usp=drive_link">VaporClay III</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1SCCinnzzIzh2V1xBoHzrwOCM6Di7N3-0/view?usp=drive_link">VaporClay IV</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1aKKy5dR2iJ0bqIIskcxAM8d983eZ40qz/view?usp=drive_link">VaporClay V</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1oWIbvX-7hGitEl7ma4_O7TLYjXM5YZc6/view?usp=drive_link">VaporClay VI</a></li>
 
                                     </ul>
 
