--- a/LP.html
+++ b/LP.html
@@ -92,7 +92,8 @@
                             <section class="wrapper-inner">
 
                                 <header>
-                                    <h2 class="section-title">Torrão Experimental</h2>
+                                    <h2 class="section-title">LP</h2>
+                                    <h3 class="section-title">Torrão Experimental<h3>
                                 </header>
 
                             </section>
