--- a/Audiovisual.html
+++ b/Audiovisual.html
@@ -98,17 +98,17 @@
                             </section>
 
 
-                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/oas0NUPA1yI?si=k5SjJUD5knvfV7ys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/vLw-UxzCots?si=cbM0TIxI5VGnzB8O" title="YouTube video player" frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+                            allowfullscreen></iframe>
 
 
                             <section class="wrapper-inner">
 
                                 <div class="description">
                                     <ul>
-                                        <h3><a href="amostras_samples.html">Amostras</a></h3>
-                                        <h3><a href="paisagens.html">Paisagens</a></h3>
-                                        <h3><a href="ferramentas.html">Ferramentas</a></h3>
+                                        <h3><a href="https://youtu.be/vLw-UxzCots">Acção mexer no pó com som</a></h3>
+                                        <h3><a href="https://youtu.be/IQTSqp6DdVU">Acção peneirar com som</a></h3>
                                     </ul>
                             
                                 </div>
