--- a/amostras_samples.html
+++ b/amostras_samples.html
@@ -97,14 +97,12 @@
 
                             </section>
 
-
-                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/oas0NUPA1yI?si=k5SjJUD5knvfV7ys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            
+                            <img src="images/amostras.JPG" alt="" class="img-responsive" />
 
 
                             <section class="wrapper-inner">
 
-                                <a href="Libro.html">Amostras</a>
                                 <div class="description">
                                     <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
