--- a/paisagens.html
+++ b/paisagens.html
@@ -97,9 +97,8 @@
 
                             </section>
 
-
-                            <iframe width="100%" height="580" src="https://www.youtube.com/embed/oas0NUPA1yI?si=k5SjJUD5knvfV7ys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <img src="images/limite_trafaria_2.JPG" alt="" class="img-responsive" />
+                           
 
 
                             <section class="wrapper-inner">
