add textos section

--- a/Audiovisual.html
+++ b/Audiovisual.html
@@ -107,8 +107,16 @@
 
                                 <div class="description">
                                     <ul>
-                                        <h3><a href="https://youtu.be/vLw-UxzCots">Acção mexer no pó com som</a></h3>
-                                        <h3><a href="https://youtu.be/IQTSqp6DdVU">Acção peneirar com som</a></h3>
+                                        <h3><a href="https://youtu.be/vLw-UxzCots">Mexer no pó</a></h3>
+                                        <h3><a href="https://youtu.be/IQTSqp6DdVU">Peneirar</a></h3>
+                                        <h3><a href="https://youtu.be/3SSTnolo9q8">Fazer chover água sobre torrão amostra 3</a></h3>
+                                        <h3><a href="https://youtu.be/qc-I0kq5mUM">Fazer chocar com força dois torrões</a></h3>
+                                        <h3><a href="https://youtu.be/jG2VDiYCkyM">Filmar mata (Paisagem)</a></h3>
+                                        <h3><a href="https://youtu.be/Y0YxY2bJM1E">Levantar pedra de barro de recipiente com água</a></h3>
+                                        <h3><a href="https://youtu.be/_3AZwnPrSEk">Martelar pedras de barro</a></h3>
+                                        <h3><a href="https://youtu.be/1-KG2xIDK6U">Misturar água com torrões desfeitos</a></h3>
+                                        <h3><a href="https://youtu.be/IQTSqp6DdVU">Peneirar</a></h3>
+                                        <h3><a href="https://youtu.be/F_SUTP_52Nc">Partir torrão à picareta</a></h3>
                                     </ul>
                             
                                 </div>
