--- a/Textos.html
+++ b/Textos.html
@@ -50,10 +50,11 @@
                         <div class="main-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="Libro.html">Livro</a></li>
+                                <li><a href="Livro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
-                                <li><a href="Arquivo.html">Arquivo</a></li>
+                                <li><a href="Arquivo.html">Arquivo de Som</a></li>
+                                <li><a href="Audiovisual.html">Arquivo Audiovisual</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
                             </ul>
                         </div>
@@ -97,16 +98,100 @@
                             </section>
 
 
-                            <video controls class="max-width-video" poster="images/PBO_thumbnail.JPG">
-                        <source src="videos/PBO_MAIN_REEL.mp4" type="video/mp4">
-                        </video>
-
+                            <img src="images/torrao-texto.JPG" alt="" class="img-responsive" />
 
                             <section class="wrapper-inner">
 
 
                                 <div class="description">
-                                    Texto sobre o Mapa.
+                                    <br>
+                                    <h4 >Descrição do Projecto</h4>
+                                    <br>
+                                    
+                                        O som que se esconde nos torrões é um projeto colaborativo que procura
+                                        cruzar a disciplina do som com o entendimento do barro/terra próprio da
+                                        cerâmica, a partir de uma aproximação ao universo sonoro da terra Trafaria,
+                                        com o objetivo de consciencializar a comunidade sobre o valor da história do
+                                        lugar e, sobretudo, do potencial dos pequenos detalhes que estão à espera de
+                                        ser apanhados, tais como torrões no mato.
+                                        <br>
+                                        <br>
+                                        <br>
+                                        A terra da Trafaria é aqui pensada como território geográfico e social, mas
+                                        também enquanto material físico, geológico, na qual se funda a vida da vila. Os
+                                        processos tecnológicos de captação e de processamento sonoros visam criar
+                                        uma percepção diferenciada da Trafaria cujo impacto possa ser transformador
+                                        na vida de quem nela vive e a visita.
+                                        <br>
+                                        <br>
+                                        <br>
+                                        Como qualquer ceramista que busca o seu barro na natureza, partimos da
+                                        recolha de matérias minerais da Trafaria, mapeando o espaço, ao mesmo
+                                        tempo que procuramos recolher e fazer uma observação sonora detalhada
+                                        desses processos, isto é, observando os sons que a natureza-terra reverbera
+                                        quando interagimos com ela.Após essa primeira fase do trabalho, em atelier,
+                                        procuraremos o som isolado destas matérias naturais, tal como foram
+                                        recolhidas.
+                                        <br>
+                                        <br>
+                                        <br>
+                                        Numa fase seguinte, ao jeito do que acontece na cerâmica, processaremos as
+                                        amostras e faremos provetas de modo a observar as propriedades do áudio
+                                        digital, tais com a frequência e a intensidade, por meio de visualização de
+                                        espectro harmónico e de amplitude. Com a ajuda de softwares como Sonic
+                                        Visualiser e Audacity obteremos dados que nos oferecerão uma dimensão
+                                        visual sonora e revelarão uma nova perspectiva sobre o que a argila nos pode
+                                        mostrar.
+                                        <br>
+                                        <br>
+                                        <br>                                        
+                                        Quando a argila se encontra na natureza, no momento de ser recolhida, há
+                                        diversos materiais que são parte daquela terra primigênia: pedras, areia, fibras,
+                                        matéria orgânica e outros sedimentos. Todos eles têm influência na
+                                        compleição da terra, portanto na forma como ela vibra. Na elaboração de
+                                        objectos, a presença ou ausência destes materiais será também um elemento a
+                                        ser considerado, como potencial apoio na hora de esculpir o som.
+                                        <br>
+                                        <br>
+                                        <br>
+                                        Paralelamente, todos estes processos de recolha e transformação do material
+                                        geológico e sonoro serão acompanhados de registos fotográficos que poderão
+                                        ou não ser incorporados na composição visual da instalação.
+                                        Numa última fase, por meio de técnicas de edição e sampling, os registos de
+                                        áudio serão transformados numa instalação composta por fragmentos de
+                                        paisagens sonoras inspirados na zona da Trafaria numa forte ligação
+                                        imaginária com a matéria geológica.
+                                        <br>
+                                        <br>
+                                        <br>
+                                        Em última instância, no que diz respeito à utilização de tecnologias, este
+                                        projecto pretende ser um convite para as pessoas, tanto locais como visitantes,
+                                        explorarem os seus territórios com o que têm ao seu dispor. Atualmente, com o
+                                        <br>
+                                        <br>
+                                        <br>
+                                        desenvolvimento tecnológico ao nível do utilizador e a sofisticação das
+                                        interfaces disponíveis, basta um computador ou um telemóvel e sair à rua.
+                                        Todos podemos, em maior ou menor grau, criar, observar e descobrir através
+                                        destas ferramentas, tal como todos podemos sair à rua para apanhar torrões e
+                                        brincar com eles. 
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <div>
+                                        <p>
+                                        ... tem qualquer coisa a ver com construir, com criar uma
+                                        versão ou um imaginário da Trafaria por meio de torrões...pois a
+                                        percepção de um lugar pode mudar simplesmente ao fecharmos os
+                                        olhos e ao abrirmo-nos à escuta; podemos ver a história do mundo
+                                        nas betas da terra, mas também podemos imaginar um outro dentro
+                                        de um só torrão .
+                                        </p>
+                                        </div>
 
                                 </div>
 
