--- a/Livro.html
+++ b/Livro.html
@@ -96,20 +96,14 @@
                                 </header>
 
                             </section>
-                            <div>
-                            <iframe src="documents/document_QR.pdf" width="100%" height="580"></iframe>
-                            </div>
-
 
 
                             <section class="wrapper-inner">
 
+                                <img src="images/capa_livro_web.jpg" alt="" class="img-responsive" />
 
-                                <div class="description">
-                                    
-                                    Breve texto sobre o documento.
-
-                                </div>
+                                <h2 class="section-title"><a href="https://www.figma.com/proto/aYt8mObIXOKkFH17xWOwBu/som-que-es-esconde-nos-torr%C3%B5es_FInal_movil?node-id=0-1&t=RiOx6XO0oW2zVl2V-1">Livro Interactivo (Telemóvel-Beta)</a></h2>
+                               
 
                             </section>
 
