--- a/amostras_samples.html
+++ b/amostras_samples.html
@@ -108,84 +108,84 @@
                                         <p style="margin: 0; height: 5mm;"></p>
                                         <li> <p>Amostra 2</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_2.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_2.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_2_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_2_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <p style="margin: 0; height: 5mm;"></p>
                                         <li> <p>Amostra 3</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_3.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_3.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_3_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_3_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 4</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_4.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_4.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_4_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_4_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 5</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_5.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
+                                        <source src="audio/amostras/hidratado_amostra_5.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 5</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_5.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
+                                        <source src="audio/amostras/hidratado_amostra_5.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 6</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_6.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_6.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_6_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_6_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 7</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_7.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_7.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_7_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_7_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 8</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_8.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_8.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_8_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_8_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 9</p>                           
                                         <audio controls   >
-                                        <source src="audio/amostras/agitar_9.wav" type="audio/wav">
+                                        <source src="audio/amostras/agitar_9.mp3" type="audio/mpeg">
                                         </audio>
                                         <br>
                                         <audio controls   >
-                                        <source src="audio/amostras/amostra_9_raw_hidrated.wav" type="audio/wav">
+                                        <source src="audio/amostras/amostra_9_raw_hidrated.mp3" type="audio/mpeg">
                                         </audio>
                                         </li>
 
