--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                             </section>
                             <audio controls autoplay loop >
-                                <source src="audio/biblioteca.wav" type="audio/wav">
+                                <source src="audio/paisagens/biblioteca.mp3" type="audio/mpeg">
                             </audio>
 
                 </div>
