--- a/Mapa.html
+++ b/Mapa.html
@@ -112,7 +112,7 @@
 
                                 </div>
                                 <audio controls autoplay loop >
-                                    <source src="audio/paisagens/paisagem_encosta_amostra_5.wav" type="audio/wav">
+                                    <source src="audio/paisagens/paisagem_encosta_amostra_5.mp3" type="audio/mpeg">
                                     </audio>
                             </section>
 
