--- a/libro_outro.html
+++ b/libro_outro.html
@@ -32,7 +32,7 @@
             <hgroup>
 
                 <h1>
-                    <img class="img-menu-PBO" src="./images/thumbnail-menu.JPG" alt="Menu Torrao" title="Home Torroes" />
+                    <img class="img-menu-PBO" src="./images/thumbnail-menu.png" alt="Menu Torrao" title="Home Torroes" />
                 </h1>
 
                 <nav>
